; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/data/extr_msgparse.c_smart_compare.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/data/extr_msgparse.c_smart_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64*, i64*, i64*)* @smart_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smart_compare(i32* %0, i64* %1, i64* %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64*, align 8
  store i32* %0, i32** %6, align 8
  store i64* %1, i64** %7, align 8
  store i64* %2, i64** %8, align 8
  store i64* %3, i64** %9, align 8
  %11 = load i64*, i64** %7, align 8
  %12 = load i64, i64* %11, align 8
  %13 = call i64 @LABEL_IS_PTR(i64 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %56

15:                                               ; preds = %4
  %16 = load i32*, i32** %6, align 8
  %17 = load i64*, i64** %7, align 8
  %18 = getelementptr inbounds i64, i64* %17, i64 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64*, i64** %7, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 1
  %22 = load i64, i64* %21, align 8
  %23 = call i32 @PTR_OFFSET(i64 %19, i64 %22)
  %24 = call i64* @sldns_buffer_at(i32* %16, i32 %23)
  store i64* %24, i64** %10, align 8
  %25 = load i64*, i64** %10, align 8
  %26 = load i64*, i64** %8, align 8
  %27 = icmp eq i64* %25, %26
  br i1 %27, label %32, label %28

28:                                               ; preds = %15
  %29 = load i64*, i64** %10, align 8
  %30 = load i64*, i64** %9, align 8
  %31 = icmp eq i64* %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %28, %15
  store i32 0, i32* %5, align 4
  br label %61

33:                                               ; preds = %28
  %34 = load i64*, i64** %9, align 8
  %35 = load i64, i64* %34, align 8
  %36 = call i64 @LABEL_IS_PTR(i64 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %55

38:                                               ; preds = %33
  %39 = load i64*, i64** %9, align 8
  %40 = getelementptr inbounds i64, i64* %39, i64 0
  %41 = load i64, i64* %40, align 8
  %42 = load i64*, i64** %7, align 8
  %43 = getelementptr inbounds i64, i64* %42, i64 0
  %44 = load i64, i64* %43, align 8
  %45 = icmp eq i64 %41, %44
  br i1 %45, label %46, label %55

46:                                               ; preds = %38
  %47 = load i64*, i64** %9, align 8
  %48 = getelementptr inbounds i64, i64* %47, i64 1
  %49 = load i64, i64* %48, align 8
  %50 = load i64*, i64** %7, align 8
  %51 = getelementptr inbounds i64, i64* %50, i64 1
  %52 = load i64, i64* %51, align 8
  %53 = icmp eq i64 %49, %52
  br i1 %53, label %54, label %55

54:                                               ; preds = %46
  store i32 0, i32* %5, align 4
  br label %61

55:                                               ; preds = %46, %38, %33
  br label %56

56:                                               ; preds = %55, %4
  %57 = load i32*, i32** %6, align 8
  %58 = load i64*, i64** %7, align 8
  %59 = load i64*, i64** %9, align 8
  %60 = call i32 @dname_pkt_compare(i32* %57, i64* %58, i64* %59)
  store i32 %60, i32* %5, align 4
  br label %61

61:                                               ; preds = %56, %54, %32
  %62 = load i32, i32* %5, align 4
  ret i32 %62
}

declare dso_local i64 @LABEL_IS_PTR(i64) #1

declare dso_local i64* @sldns_buffer_at(i32*, i32) #1

declare dso_local i32 @PTR_OFFSET(i64, i64) #1

declare dso_local i32 @dname_pkt_compare(i32*, i64*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
